fix: resolve production asset loading and improve code quality
Moved assets to public/ for Vite compatibility. Refactored CSS to use variables and nesting. Added check script and improved linting config.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         />
 
         <link rel="stylesheet" href="css/styles.css" />
+        <link rel="preload" as="image" href="/img/1.jpg" />
 
         <!-- Favicons -->
         <link
@@ -219,7 +220,7 @@
             </nav>
         </main>
 
-        <script src="js/analytics.js"></script>
+        <script type="module" src="js/analytics.js"></script>
         <script type="module" src="js/site.js"></script>
     </body>
 </html>
