feat: add About Me page and navigation link

--- a/index.html
+++ b/index.html
@@ -65,6 +65,27 @@
             <nav class="glass-panel nav-panel">
                 <ul class="social-links">
                     <li>
+                        <a href="about.html" aria-label="About Me">
+                            <!-- User/Info Icon -->
+                            <svg 
+                                xmlns="http://www.w3.org/2000/svg" 
+                                width="24" 
+                                height="24" 
+                                viewBox="0 0 24 24" 
+                                fill="none" 
+                                stroke="currentColor" 
+                                stroke-width="2" 
+                                stroke-linecap="round" 
+                                stroke-linejoin="round" 
+                                class="icon"
+                            >
+                                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path>
+                                <circle cx="12" cy="7" r="4"></circle>
+                            </svg>
+                            <span class="tooltip">About Me</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="https://blog.onel0p3z.co" aria-label="Blog">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
